--- a/org-mode-documentation.org
+++ b/org-mode-documentation.org
@@ -19,6 +19,12 @@ if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-document
 
 * The Org guide and manual
 
+#+begin_html
+<a href="http://www.network-theory.co.uk/org/manual/">
+<img src="http://www.network-theory.co.uk/org/manual/9781906966089-small" style="float:right;"/>
+</a>
+#+end_html
+
 - Read the [[file:guide/index.html][online compact guide]] or download it as a [[file:orgguide.pdf][PDF document]].  The
   compact guide is a ~40-pages introduction to Org mode.  It covers all
   features in a basic way and has links to in-depth documentation in the
@@ -30,6 +36,14 @@ if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-document
   and advanced documentation.
 
 - You can also read the entire manual online in a [[file:org.html][single monolithic file]].
+
+  #+begin_html
+  <a href="http://www.network-theory.co.uk/org/manual/">
+  <img src="http://www.network-theory.co.uk/org/manual/9781906966089-small" 
+       alt="Org Manual paper version by Network Theory" 
+       style="float:right;margin:5pt;" width="120px" />
+  </a>
+  #+end_html
 
 - Download the manual as a ~200-pages [[file:org.pdf][PDF document]].
 
