--- a/fr/index.org
+++ b/fr/index.org
@@ -11,35 +11,33 @@
 
 # See http://jonraasch.com/blog/a-simple-jquery-slideshow for a slideshow
 #+begin_html
-
 <script language="Javascript">
 function banner() { } ; b = new banner() ; n = 0
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/org-plot1.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/org-R3.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/org-spreadsheet-system.jpg' alt='' class='active'/>"
-b[n++]= "<img class='random' src='http://orgmode.org/worg/images/screenshots/org-mode-publishing.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/worg/images/screenshots/davison-minimal-research.png' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/big-table.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/column-view-big-project.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/org-plot-page-in-worg.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/bernt3.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/column-view.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/customize.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/using-date-time-charles-cave.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/vmap-org-export-to-pdf2.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/vmap-org-sources-iimage-mode2.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/grades.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/org_andreas.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/web_site_org_code.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/org-mode-zenburn.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/weekly-agenda-view-zenburn.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/david_o_toole.jpg' alt='' />"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/orgmode-inlinetasks.jpg' alt='' class='active'/>"
-b[n++]= "<img class='random' src='http://orgmode.org/img/screenshots/clocking-and-overlays.jpg' alt='' />"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/org-plot1.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/org-R3.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/org-spreadsheet-system.jpg' alt='' rel='lightbox' class='active'/>"
+b[n++]= "<a href='http://orgmode.org/worg/images/screenshots/org-mode-publishing.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/worg/images/screenshots/davison-minimal-research.png' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/big-table.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/column-view-big-project.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/org-plot-page-in-worg.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/bernt3.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/column-view.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/customize.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/using-date-time-charles-cave.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/vmap-org-export-to-pdf2.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/vmap-org-sources-iimage-mode2.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/grades.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/org_andreas.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/web_site_org_code.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/org-mode-zenburn.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/weekly-agenda-view-zenburn.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/david_o_toole.jpg' alt='' rel='lightbox'></a>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/orgmode-inlinetasks.jpg' alt='' rel='lightbox' class='active'/>"
+b[n++]= "<a href='http://orgmode.org/img/screenshots/clocking-and-overlays.jpg' alt='' rel='lightbox'></a>"
 i=Math.floor(Math.random() * n) ; 
 document.write( b[i] )
 </script>
-
 #+end_html
 
 Org-mode est une outil pour prendre des notes, maintenir des TODO listes,
