Mention how to enlarge/lower a picture in index.

--- a/fr/index.org
+++ b/fr/index.org
@@ -42,6 +42,8 @@ document.write( b[i] )
 </script>
 #+end_html
 
+(Cliquez pour agrandir l'image - touche =Escape= pour la fermer.)
+
 Org-mode est une outil pour prendre des notes, maintenir des TODO listes,
 faire de la gestion de projet, de la planification et de la publication
 avec un système en text brut, simple et effectif.
