--- a/fr/org-mode-soutenir.org
+++ b/fr/org-mode-soutenir.org
@@ -9,8 +9,8 @@
 
 * Pourquoi ?
 
-Org Mode is still growing fast, donation helps the maintainer dedicate more
-time to Org's maintainance.
+Org Mode continue d'être développé rapidement, les dons aides le mainteneur
+à consacrer plus de temps à cette tâche.
 
 * Faire un don via Paypal
 
@@ -25,7 +25,7 @@ Vous pouvez faire un don direct via Paypal:
     <input type="hidden" name="lc" value="FR" />
     <input type="hidden" name="currency_code" value="EUR" />
     <input type="hidden" name="tax" value="0" />
-    <button name="submit" alt="Faire un paiement avec PayPal" />Soutenir!</button>
+    <button name="submit" alt="Faire un paiement avec PayPal" />Soutenir Org !</button>
   </form>
 #+end_html
 
