--- a/fr/org-mode-documentation.org
+++ b/fr/org-mode-documentation.org
@@ -5,7 +5,7 @@
 #+DESCRIPTION: Org: un mode Emacs pour la prise de notes, la planification et la publication
 #+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
 #+STYLE:     <base href="http://orgmode.org/fr/" />
-#+STYLE:     <link rel="icon" type="image/png" href="http://orgmode.org/org-mode-unicorn.ico" />
+#+STYLE:     <link rel="icon" type="image/png" href="http://orgmode.org/org-mode-unicorn.png" />
 #+STYLE:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 
 * Le guide et le manuel Org
