--- a/ja/org-mode-news.org
+++ b/ja/org-mode-news.org
@@ -22,9 +22,9 @@ if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-nouvelle
   #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
-- <2011-12-12> バージョン 7.8, 7.8.01 and 7.8.02 を公開
-- <2011-12-12> The design and content of org's website has been refreshed.
-- <2011-12-02> The Worg git repo is now hosted on [[http://orgmode.org/w/worg.git][orgmode.org.]]
+- <2011-12-12> バージョン 7.8、7.8.01、7.8.02 を公開
+- <2011-12-12> ウェブサイトのデザインとコンテンツを更新
+- <2011-12-02> Worg の Git リポジトリを [[http://orgmode.org/w/worg.git][orgmode.org]] でホスティング開始
 - <2011-07-28> バージョン 7.7 を公開
 - <2011-07-06> バージョン 7.6 を公開
 - <2011-03-07> バージョン 7.5 を公開
@@ -32,5 +32,5 @@ if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-nouvelle
 - <2010-12-17> マニュアルが本になりました。14.95ドルで、[[http://www.network-theory.co.uk/org/manual/][Network Theory Ltd]] から出版されています。一冊につき1ドルがorg-modeプロジェクトに寄付されます。
 - <2010-12-10> バージョン 7.04 を公開
 - <2010-12-03> Android 版の MobileOrg が音声入力をサポート
-- <2010-11-25> Org-modeを使うために、熱烈なviユーザが、尊敬に値するEmacsユーザになる時代は終わったかもしれません。Herbert Sitz氏が[[https://github.com/hsitz/VimOrganizer][Vim用の Org-mode クローン]] を作成しています。この[[http://vimeo.com/17182850][ビデオ]] 見ると、今後が楽しみです。
+- <2010-11-25> Org-modeを使うために、熱烈なviユーザが尊敬するEmacsユーザになる時代は終わったかもしれません。Herbert Sitz氏が[[https://github.com/hsitz/VimOrganizer][Vim用の Org-mode クローン]] を作成しています。この[[http://vimeo.com/17182850][ビデオ]] 見ると、今後が楽しみです。
 - <2010-06-06> iPhone アプリケーションの[[http://mobileorg.ncogni.to/][MobileOrg]] が、バージョン 1.5 になり暗号化をサポート
