--- a/org-mode-links.org
+++ b/org-mode-links.org
@@ -10,11 +10,12 @@
 
 #+begin_html
 <script type="text/javascript">
-if (navigator.appName == 'Netscape') 
-var language = navigator.language; 
-else 
-var language = navigator.browserLanguage; 
-if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-plus.html'; 
+if (navigator.appName == 'Netscape')
+var language = navigator.language;
+else
+var language = navigator.browserLanguage;
+if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-plus.html';
+if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-links.html';
 </script>
 #+end_html
 
@@ -32,7 +33,7 @@ if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-plus.htm
 
   Check all talks on the [[file:talks.org][dedicated "talks" page]].
 
-* Org from your mobile 
+* Org from your mobile
 
   [[http://mobileorg.ncogni.to/][MobileOrg]] is an excellent open source application to read and change
   Org-files on the road, using an iPhone, and then sync the changes back to
@@ -40,4 +41,3 @@ if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-plus.htm
 
   Matt Jones is currently developing a compatible application for Android,
   and this project is [[http://wiki.github.com/matburt/mobileorg-android/][hosted here]].
-
