--- a/org-mode-news.org
+++ b/org-mode-news.org
@@ -10,11 +10,12 @@
 
 #+begin_html
 <script type="text/javascript">
-if (navigator.appName == 'Netscape') 
-var language = navigator.language; 
-else 
-var language = navigator.browserLanguage; 
-if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-nouvelles.html'; 
+if (navigator.appName == 'Netscape')
+var language = navigator.language;
+else
+var language = navigator.browserLanguage;
+if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-nouvelles.html';
+if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-news.html';
 </script>
 #+end_html
 
@@ -40,4 +41,3 @@ if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-nouvelle
   Org]] mode is be written by Herbert Sitz, and judging by the [[http://vimeo.com/17182850][videos]] it
   looks promising.
 - <2010-06-06> iPhone App [[http://mobileorg.ncogni.to/][MobileOrg]] version 1.5 introduces encryption.
-
