--- a/org-mode-support.org
+++ b/org-mode-support.org
@@ -10,11 +10,12 @@
 
 #+begin_html
 <script type="text/javascript">
-if (navigator.appName == 'Netscape') 
-var language = navigator.language; 
-else 
-var language = navigator.browserLanguage; 
+if (navigator.appName == 'Netscape')
+var language = navigator.language;
+else
+var language = navigator.browserLanguage;
 if (language.indexOf('fr') > -1) document.location.href = '/fr/org-mode-support.html';
+if (language.indexOf('ja') > -1) document.location.href = '/ja/org-mode-support.html';
 </script>
 #+end_html
 
