--- a/index.org
+++ b/index.org
@@ -78,7 +78,7 @@ planning, and authoring with a fast and effective plain-text system.
 
 - Flexibility :: Org-mode is like a Swiss army knife.  People use it for
                  [[http://members.optusnet.com.au/~charles57/GTD/orgmode.html][Getting Things Done (GTD)]], as a [[http://newartisans.com/2007/08/using-org-mode-as-a-day-planner/][Day Planner]], as a
-                 [[http://sachachua.com/wp/2008/01/18/outlining-your-notes-with-org/][Notebook]], for Web and PDF [[http://orgmode.org][Authoring]], and much more.
+                 [[http://sachachua.com/wp/2008/01/18/outlining-your-notes-with-org/][Notebook]], for Web and PDF authoring, and much more.
 
 - Support :: Org-mode is [[http://orgmode.org/manual/index.html][documented extensively]], and many [[http://orgmode.org/worg/org-tutorials/index.php][tutorials]] put
              spotlights on particular features.  Org-mode is supported by
